--- a/app/pug/pages/index.pug
+++ b/app/pug/pages/index.pug
@@ -8,5 +8,5 @@ html(lang="ru")
 		link(rel="icon" type="image/png" sizes="64x64" href="img/icon.png")
 		link(rel="stylesheet" href="css/libs.min.css")
 		link(rel="stylesheet" href="css/main.css")
-		title Document
+		title Fifteen
 	include /layout/body
