--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,3 +1,46 @@
-@import 'base/_mixins'
-@import 'base/_reset'
-@import 'base/_fonts'
+@import base/_reset
+body
+	height: 400px
+	width: 405px
+.grid
+	display: grid
+	width: 405px
+	grid-template-rows: repeat(4, 100px)
+	grid-template-columns: repeat(4, 100px)
+	grid-gap: 1px
+	background: #333333
+	border: 1px solid #333333
+.el
+	height: 100%
+	width: 100%
+	background: white
+	color: #333333
+	font-size: 40px
+	text-align: center
+	line-height: 100px
+	user-select: none
+	cursor: pointer
+	position: relative
+
+.congratulations
+	position: absolute
+	font-size: 80px
+	width: 420px
+	height: 420px
+	margin-top: -10px
+	backdrop-filter: blur(3px)
+	color: #333333
+	visibility: hidden
+	opacity: 0
+	transition: .5s
+	cursor: auto
+	user-select: none
+	display: flex
+	flex-direction: column
+	justify-content: center
+	align-items: center
+
+.again
+	font-size: 30px
+	cursor: pointer
+	text-shadow: 0 0 4px white
